intermediate status, total distance without buffering works.